IRtest_out/shortest_path.err
irs/shortest_path.ll:20088:39: error: expected value token
  %bool_30091 = icmp ne i32* %v30073, float 0.00000000
                                      ^
1 error generated.
